[gd_scene load_steps=6 format=3 uid="uid://b86inyphjxolg"]

[ext_resource type="Script" path="res://addons/goventure/visual_scripting/Camera.gd" id="1_4onb7"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(1022, 19.5)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(1020, 20)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(20, 599)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(20, 598)

[node name="Camera" type="Camera2D"]
offset = Vector2(515, 299)
limit_left = -2000
limit_top = -2000
limit_right = 2000
limit_bottom = 2000
editor_draw_limits = true
script = ExtResource("1_4onb7")

[node name="Up" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
position = Vector2(515, 8.75)
shape = SubResource("1")

[node name="Down" type="Area2D" parent="."]
visible = false
position = Vector2(0, 579)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
position = Vector2(516, 9.25)
shape = SubResource("3")

[node name="Left" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(12, 298.5)
shape = SubResource("2")

[node name="Right" type="Area2D" parent="."]
visible = false
position = Vector2(1004, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(12, 301)
shape = SubResource("4")

[connection signal="mouse_entered" from="Up" to="." method="_on_Up_mouse_entered"]
[connection signal="mouse_exited" from="Up" to="." method="_on_Up_mouse_exited"]
[connection signal="mouse_entered" from="Down" to="." method="_on_Down_mouse_entered"]
[connection signal="mouse_exited" from="Down" to="." method="_on_Down_mouse_exited"]
[connection signal="mouse_entered" from="Left" to="." method="_on_Left_mouse_entered"]
[connection signal="mouse_exited" from="Left" to="." method="_on_Left_mouse_exited"]
[connection signal="mouse_entered" from="Right" to="." method="_on_Right_mouse_entered"]
[connection signal="mouse_exited" from="Right" to="." method="_on_Right_mouse_exited"]
